# YutsuOS

./: .asm-lsp.toml  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  build.sh  linker.ld
.github/: README.md
.github/workflows/: runner.yml
cmake/: 1_Options.cmake  2_Optimizations.cmake  3_Sources.cmake  4_Warnings.cmake  5_Linker.cmake  6_Iso.cmake  7_Qemu.cmake  8_Tests.cmake
docs/: README.md
docs/core/: vga.md
docs/std/: array.md  io.md  memory.md  show.md  types.md
include/YutsuOS/: macros.h  types.h  vga.h
include/YutsuOS/core/: byte.h  gdt.h  heap.h  interrupts.h  kernel.h  keyboard.h  panic.h  time.h  vga.h
include/YutsuOS/std/: array.h  io.h  memory.h  string.h  types.h
include/YutsuOS/yutsh/: builtin.h  yutsh.h
scripts/: dependencies.sh
src/: boot.asm  kernel.c
src/core/: keyboard.c
src/core/byte/: byte.c
src/core/gdt/: gdt.c  gdt_load.asm
src/core/interrupts/: idt.c  idt_load.asm  isr.c  isr_asm.asm  pic.c
src/core/kernel/: kernel_init.c  qemu_shutdown.asm  timer.c
src/core/panic/: panic.c
src/core/time/: date.c  time.c
src/core/timer/: timer.c
src/core/vga/: vga.c
src/grub/: grub.cfg
src/print/: print.asm  print_hex.asm
src/std/: io.c
src/std/array/: array.c  array_free.c  array_from_string.c
src/std/io/: error.c  input.c  show.c
src/std/memory/: allocate.c  heap.c  liberate.c
src/std/string/: itoa.c  memcmp.c  memcpy.c  memset.asm  strcmp.asm  strdup.c  strlen.asm  strncmp.asm  strndup.c
src/vga/: vga.c
src/yutsh/: yutsh.c
src/yutsh/builtin/: builtin.c  builtin_azerty.c  builtin_clear.c  builtin_date.c  builtin_qwerty.c  builtin_reboot.c  builtin_show.c  builtin_shutdown.c  builtin_uptime.c
src/yutsh/builtin/snake/: builtin_snake.c  builtin_snake_game_draw.c  builtin_snake_game_over.c  builtin_snake_game_state.c  builtin_snake_loop.c  builtin_snake_update.c  snake.h
src/yutsh/builtin/tests/: builtin_tests.c  builtin_tests_allocate.c  builtin_tests_array.c  builtin_tests_memory.c  builtin_tests_string.c  tests.h
